# b2b-order-messaging-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  websocket_client.html
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1769db049246_add_orders_table.py  223ec68377ec_initial_migration.py  b4cb0ae885f0_add_messages_table.py
app/: main.py  worker.py
app/api/: deps.py
app/core/: config.py  security.py  ws_manager.py
app/crud/: message.py  order.py  user.py
app/db/: database.py
app/models/: __init__.py  message.py  order.py  user.py
app/schemas/: message.py  order.py  user.py
