[tool.poetry]
package-mode = false
name = "b2b-order-messaging-service"
version = "0.1.0"
description = "Core service for B2B orders and real-time communication"
authors = ["Sviatoslav Valchyshen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.31.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
websockets = "^12.0"
celery = "^5.3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^5.0.0"
pyjwt = "^2.11.0"
email-validator = "^2.3.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"